--- a/scripts/sample.html
+++ b/scripts/sample.html
@@ -1,60 +1,217 @@
   <html>
   <head>
-    <title>Boozang report</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://cdn.boozang.com/css/style.css">
+    <title>Boozang - Test Execution Summary</title>
   </head>
   <body>
-    <h1>Boozang report</h1>
-<h3>Scenarios</h3><ul><li>Total: 41</li><li>Failed: 3</li></ul><h3>Test Steps</h3><ul><li>Total: 242</li><li>Failed: 3</li><li>Skipped: 4</li><li>Pending: 0</li></ul><h3>Issues</h3><ul><li>Total issues: 2</li><li>To be defined: 1</li><li>Application: 0</li><li>Automation: 1</li><li>Unknown: 0</li></ul>
-<h3>Most impactful issues</h3>
-<table><tr><td>
+      <header class="top_header">
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <h1 class="heading">Boozang Test Execution Summary</h1>
+              </div>
+            </div>
+          </div>
+      </header>
+      <section class="chart_section">
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                  <article class="table_area">
+                    <header class="table_header test">
+                        <h6>Test Scenarios</h6>
+                      </header>
+                    <table class="table">
+                        <tbody>
+                          <tr>
+                            <th scope="row">Total</th>
+<td>41</td>                          </tr>
+                          <tr>
+                            <th scope="row">Failed</th>
+<td>3</td>                          </tr>
+                        </tbody>
+                      </table>
+                  </article>
+              </div>
+              <div class="col-sm">
+                <article class="table_area">
+                <header class="table_header steps">
+                    <h6>Test Steps</h6>
+                </header>
+              <table class="table">
+                  <tbody>
+                    <tr>
+                      <th scope="row">Total</th>
+<td>242</td>                    </tr>
+                    <tr>
+                      <th scope="row">Failed</th>
+<td>3</td>                   </tr>
+                    <tr>
+                        <th scope="row">Skipped</th>
+<td>4</td>                      </tr>
+                      <tr>
+                        <th scope="row">Pending</th>
+<td>0</td>
+                      </tr>
+                  </tbody>
+                </table>
+            </article>
+            </div>
+            <div class="col-sm">
+                <article class="table_area">
+                <header class="table_header issues">
+                  <h6>Issues</h6>
+                </header>
+              <table class="table">
+                  <tbody>
+                    <tr>
+                      <th scope="row">Total</th>
+<td>2</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">To be defined</th>
+<td>1</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Application</th>
+<td>0</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Automation</th>
+<td>1</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Unknown</th>
+<td>0</td>
+                      </tr>
+                  </tbody>
+                </table>
+                </article>
+            </div>
+            <div class="col-sm">
+                <article class="table_area">
+                <header class="table_header workers">
+                    <h6>Workers</h6>
+                </header>
+              <table class="table">
+                  <tbody>
+                    <tr>
+                      <th scope="row">Total</th>
+                      <td>7</td>
+                    </tr>
+                  </tbody>
+                </table>
+                </article>
+            </div>
+            </div>
+          </div>
+      </section>
+
+   <section class="tabs_section">
+            <div class="container">
+                <div class="row">
+                    <!-- nav tabs -->
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link active issues" id="home-tab" data-bs-toggle="tab" href="#issues" role="tab" aria-controls="issues" aria-selected="true">Issue Overview</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link steps" id="profile-tab" data-bs-toggle="tab" href="#steps" role="tab" aria-controls="steps" aria-selected="false">Slowest Test Steps</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <a class="nav-link workers" id="contact-tab" data-bs-toggle="tab" href="#workers" role="tab" aria-controls="workers" aria-selected="false">Workers Job Log</a>
+                        </li>
+                      </ul>
+                           <!-- nav content -->
+                      <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="issues" role="tabpanel" aria-labelledby="issues-tab">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                      <th scope="col">Hash</th>
+                                      <th scope="col">#</th>
+                                      <th scope="col">Description</th>
+                                      <th scope="col">Type</th>
+                                      <th scope="col">Url</th>
+                                    </tr>
+                                  </thead>
+                            <tbody>
+                               
+<tr><td>
 2 364B321151AD3FAA2F70AC6CAD1EB2D1</td><td>Order timeouts due to too many workers for extract order id</td><td>auto</td><td>m8.t3.13
 </td></tr>
 <tr><td>
-1 0FDAF6F9744DCB2219EEE23240698453</td><td>-</td><td>-</td><td>-
+1 0FDAF6F9744DCB2219EEE23240698453</td><td>null</td><td>null</td><td>null
 </td></tr>
-</table><h3>Issues</h3>
-<table><tr><td>
-158702ms:</td><td>i order product quantity: 14
+</table>                            </tbody>
+                        </table>
+                        </div>
+                        <div class="tab-pane fade" id="steps" role="tabpanel" aria-labelledby="steps-tab">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                      <th scope="col">Time</th>
+                                      <th scope="col">Test Step</th>
+                                    </tr>
+                                  </thead>
+                            <tbody>
+<tr><td>
+158702ms</td><td>i order product quantity: 14
 
 </td></tr>
 <tr><td>
-75256ms:</td><td>i order product quantity: 14
+75256ms</td><td>i order product quantity: 14
 
 </td></tr>
 <tr><td>
-52073ms:</td><td>no warning should be shown when placing the order
+52073ms</td><td>no warning should be shown when placing the order
 
 </td></tr>
 <tr><td>
-51533ms:</td><td>i order product quantity: 14
+51533ms</td><td>i order product quantity: 14
 
 </td></tr>
 <tr><td>
-45708ms:</td><td>i order product quantity: 14
+45708ms</td><td>i order product quantity: 14
 
 </td></tr>
 <tr><td>
-39644ms:</td><td>i add a retailer belonging to a certain group
+39644ms</td><td>i add a retailer belonging to a certain group
 
 </td></tr>
 <tr><td>
-39205ms:</td><td>i add a retailer belonging to a certain group
+39205ms</td><td>i add a retailer belonging to a certain group
 
 </td></tr>
 <tr><td>
-38650ms:</td><td>i add a retailer belonging to this group
+38650ms</td><td>i add a retailer belonging to this group
 
 </td></tr>
 <tr><td>
-38392ms:</td><td>i order as a retailer belonging to the group
+38392ms</td><td>i order as a retailer belonging to the group
 
 </td></tr>
 <tr><td>
-38249ms:</td><td>i add a product: coffee with format: 500 g x 1
+38249ms</td><td>i add a product: coffee with format: 500 g x 1
 
 </td></tr>
-</table><h3>Workers</h3>
-<table><tr><td>
+</table>                            </tbody>
+                        </table>
+                        </div>
+                        <div class="tab-pane fade" id="workers" role="tabpanel" aria-labelledby="workers-tab">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                      <th scope="col">Completion Time</th>
+                                      <th scope="col">Worker</th>
+                                      <th scope="col">Job</th>
+                                    </tr>
+                                  </thead>
+                            <tbody>
+<tr><td>
 [m79.t1] Logout (Mats Ljunggren - 1)
 </td></tr>
 <tr><td>
@@ -177,7 +334,25 @@
 <tr><td>
 [m119.t1(2)] Minimum items (Mats Ljunggren - 2)
 </td></tr>
-<tr><td>
-Binary file test/reports.zip match
-</td></tr>
-</table>  </body>
+</table>                            </tbody>
+                        </table>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        Something here in the footer too?...
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  </body>
+</html>
+
