--- a/scripts/test_summary.html
+++ b/scripts/test_summary.html
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="row">
                     <!-- nav tabs -->
-                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <ul class="nav nav-tabs" role="tablist">
                         <li class="nav-item" role="presentation">
                           <a class="nav-link active issues" id="home-tab" data-bs-toggle="tab" href="#issues" role="tab" aria-controls="issues" aria-selected="true">Issue Overview</a>
                         </li>
@@ -129,7 +129,7 @@
                         </li>
                       </ul>
                            <!-- nav content -->
-                      <div class="tab-content" id="myTabContent">
+                      <div class="tab-content">
                         <div class="tab-pane fade show active" id="issues" role="tabpanel" aria-labelledby="issues-tab">
                             <table class="table table-striped">
                                 <thead>
@@ -218,12 +218,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        Something here in the footer too?...
+                        <p class="copy"> &copy; 2021 - Boozang INC. ALL RIGHTS RESERVED. </p> 
                     </div>
                 </div>
             </div>
         </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> -->
   </body>
 </html>
