--- a/scripts/test_summary.html
+++ b/scripts/test_summary.html
@@ -4,10 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
-
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Boozang - Test Execution Summary</title>
@@ -25,7 +21,7 @@
                         <header class="table_header test">
                             <h6>Test Scenarios</h6>
                         </header>
-                        <table class="u-full-width">
+                        <table>
                             <thead></thead>
                             <tbody>
                                 <tr>
@@ -39,14 +35,13 @@
                             </tbody>
                         </table>
                     </article>
-
                 </div>
                 <div class="three columns">
                     <article class="table_area">
                         <header class="table_header steps">
                             <h6>Test Steps</h6>
                         </header>
-                        <table class="u-full-width">
+                        <table>
                             <thead></thead>
                             <tbody>
                                 <tr>
@@ -74,7 +69,7 @@
                         <header class="table_header issues">
                             <h6>Issues</h6>
                         </header>
-                        <table class="u-full-width">
+                        <table>
                             <thead></thead>
                             <tbody>
                                 <tr>
@@ -102,7 +97,7 @@
                         <header class="table_header workers">
                             <h6>Workers</h6>
                         </header>
-                        <table class="u-full-width">
+                        <table>
                             <thead></thead>
                             <tbody>
                                 <tr>
@@ -130,7 +125,7 @@
 
                 <div class="tab-panels">
                     <section id="issues" class="tab-panel">
-                        <table class="u-full-width">
+                        <table>
                             <thead>
                                 <tr>
                                     <th>Hash</th>
@@ -162,7 +157,7 @@
                         </table>
                     </section>
                     <section id="steps" class="tab-panel">
-                        <table class="u-full-width">
+                        <table>
                             <thead>
                                 <tr>
                                     <th>Time</th>
@@ -223,7 +218,7 @@
                         </table>
                     </section>
                     <section id="workers" class="tab-panel">
-                        <table class="u-full-width">
+                        <table>
                             <thead>
                                 <tr>
                                     <th>Completion Time</th>
